force-app/main/default/objects/Person_Effectiveness_Stat__c/Person_Effectiveness_Stat__c.object-meta.xml
<CustomObject>
    <label>Person Effectiveness Stat</label>
    <nameField>
        <displayFormat>PES-{000000}</displayFormat>
        <label>Person Effectiveness Stat Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Person Effectiveness Stats</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>