force-app/main/default/objects/Person_Effectiveness_Stat__c/fields/Common_Entity_Revenue_Stat__c.field-meta.xml
<CustomField>
    <fullName>Common_Entity_Revenue_Stat__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Common Entity Revenue Stat</label>
    <referenceTo>Entity_Revenue_Stat__c</referenceTo>
    <relationshipLabel>Person Effectiveness Stats (Common Entity Revenue Stat)</relationshipLabel>
    <relationshipName>Person_Effectiveness_Stats1</relationshipName>
    <type>Lookup</type>
</CustomField>