force-app/main/default/objects/Person_Effectiveness_Stat__c/fields/Earned__c.field-meta.xml
<CustomField>
    <fullName>Earned__c</fullName>
    <label>Earned USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>