force-app/main/default/objects/Person_Effectiveness_Stat__c/fields/Earned_Brutto_USD__c.field-meta.xml
<CustomField>
    <fullName>Earned_Brutto_USD__c</fullName>
    <label>Earned Brutto USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>