force-app/main/default/objects/Person_Effectiveness_Stat__c/fields/Entity_Revenue_Stat__c.field-meta.xml
<CustomField>
    <fullName>Entity_Revenue_Stat__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entity Revenue Stat</label>
    <referenceTo>Entity_Revenue_Stat__c</referenceTo>
    <relationshipLabel>Person Effectiveness Stats</relationshipLabel>
    <relationshipName>Person_Effectiveness_Stats</relationshipName>
    <type>Lookup</type>
</CustomField>