force-app/main/default/objects/Person_Effectiveness_Stat__c/fields/Hours_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Hours_Invoiced__c</fullName>
    <label>Hours Invoiced</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>