force-app/main/default/objects/Person_Effectiveness_Stat__c/fields/Person__c.field-meta.xml
<CustomField>
    <fullName>Person__c</fullName>
    <label>Person</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Person Effectiveness Stats</relationshipLabel>
    <relationshipName>Person_Effectiveness_Stats</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>