force-app/main/default/objects/Person_Effectiveness_Stat__c/fields/Potentially_Spent_USD__c.field-meta.xml
<CustomField>
    <fullName>Potentially_Spent_USD__c</fullName>
    <label>Potentially Spent USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>