force-app/main/default/objects/Person_Effectiveness_Stat__c/fields/Spent_Compensations_USD__c.field-meta.xml
<CustomField>
    <fullName>Spent_Compensations_USD__c</fullName>
    <label>Spent Compensations USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>